# quark

./: .gitignore  CMakeLists.txt  Makefile  README.md
common/: README.md  quark_endian.c  quark_hash.c  quark_hash.h  quark_sha256.c  quark_sha256.h
hss_verify/: .gitignore  Makefile  README.md  README.txt  c4a_hash.h  c4a_misc.c  c4a_misc.h  c4a_sha256.c  c4a_sha256.h  c4a_sha256asm.s  c4a_verify.c  c4a_verify.h  demo.c  gen_header.pl  hss_ref_20_2.h  hss_ref_20_4.h  hss_ref_40_2.h  hss_ref_40_4.h  hss_ref_40_8.h  hss_ref_60_3.h  hss_ref_60_6.h  hss_vectors_001.h  kat.c  quark_misc.c  quark_misc.h  quark_verify.c  quark_verify.h  test.c  test_sigs.pl
src/: CMakeLists.txt  Makefile
src/common/: CMakeLists.txt  Makefile  README.md  endian_utils.c  endian_utils.h  hash_wrappers.c  hash_wrappers.h  sha256.c  sha256.h  sha256asm.s
src/hss/: CMakeLists.txt  Doxyfile  Makefile  README.md  verify.c  verify.h
src/xmssmt/: CMakeLists.txt  Doxyfile  Makefile  README.md  verify.c  verify.h
test/: .gitignore  CMakeLists.txt
test/common/: CMakeLists.txt  macros.h  ret_code_strings.h  test_vector.h
test/hss/: CMakeLists.txt  Makefile  README.md  demo.c  gen_header.pl  hss_ref_20_2.h  hss_ref_20_4.h  hss_ref_40_2.h  hss_ref_40_4.h  hss_ref_40_8.h  hss_ref_60_3.h  hss_ref_60_6.h  hss_vectors_001.h  kat.c  quark_misc.c  quark_misc.h  test.c  test_sigs.pl
test/hss/Vectors/: hss_10.2.pub  hss_10.2_0.sig  hss_10.2_1.sig  hss_10.2_10.2.pub  hss_10.2_10.2_0.sig  hss_10.2_10.2_1.sig  hss_10.2_10.2_2.sig  hss_10.2_10.2_3.sig  hss_10.2_10.2_4.sig  hss_10.2_10.2_5.sig  hss_10.2_10.2_6.sig  hss_10.2_10.2_7.sig  hss_10.2_10.2_8.sig  hss_10.2_10.2_9.sig  hss_10.2_10.4.pub  hss_10.2_10.4_0.sig  hss_10.2_10.4_1.sig  hss_10.2_10.4_2.sig  hss_10.2_10.4_3.sig  hss_10.2_10.4_4.sig  hss_10.2_10.4_5.sig  hss_10.2_10.4_6.sig  hss_10.2_10.4_7.sig  hss_10.2_10.4_8.sig  hss_10.2_10.4_9.sig  hss_10.2_2.sig  hss_10.2_20.2.pub  hss_10.2_20.2_0.sig  hss_10.2_20.2_1.sig  hss_10.2_20.2_2.sig  hss_10.2_20.2_3.sig  hss_10.2_20.2_4.sig  hss_10.2_20.2_5.sig  hss_10.2_20.2_6.sig  hss_10.2_20.2_7.sig  hss_10.2_20.2_8.sig  hss_10.2_20.2_9.sig  hss_10.2_20.4.pub  hss_10.2_20.4_0.sig  hss_10.2_20.4_1.sig  (+1108 more)
test/xmssmt/: CMakeLists.txt  Makefile  README.md  demo.c  kat.c  quark_misc.c  quark_misc.h  test.c  test_sigs.pl  xmss_ref_001.h  xmss_ref_10.h  xmss_ref_16.h  xmss_ref_20.h  xmssmt_ref_001.h  xmssmt_ref_20_2.h  xmssmt_ref_20_4.h  xmssmt_ref_40_2.h  xmssmt_ref_40_4.h  xmssmt_ref_40_8.h  xmssmt_ref_60_12.h  xmssmt_ref_60_3.h  xmssmt_ref_60_6.h
test/xmssmt/Vectors/: xmss_sha2_10_256.key.pub  xmss_sha2_10_256_0.sig  xmss_sha2_10_256_1.sig  xmss_sha2_10_256_10.sig  xmss_sha2_10_256_11.sig  xmss_sha2_10_256_12.sig  xmss_sha2_10_256_13.sig  xmss_sha2_10_256_14.sig  xmss_sha2_10_256_15.sig  xmss_sha2_10_256_16.sig  xmss_sha2_10_256_17.sig  xmss_sha2_10_256_18.sig  xmss_sha2_10_256_19.sig  xmss_sha2_10_256_2.sig  xmss_sha2_10_256_20.sig  xmss_sha2_10_256_21.sig  xmss_sha2_10_256_22.sig  xmss_sha2_10_256_23.sig  xmss_sha2_10_256_24.sig  xmss_sha2_10_256_25.sig  xmss_sha2_10_256_26.sig  xmss_sha2_10_256_27.sig  xmss_sha2_10_256_28.sig  xmss_sha2_10_256_29.sig  xmss_sha2_10_256_3.sig  xmss_sha2_10_256_30.sig  xmss_sha2_10_256_31.sig  xmss_sha2_10_256_32.sig  xmss_sha2_10_256_33.sig  xmss_sha2_10_256_34.sig  xmss_sha2_10_256_35.sig  xmss_sha2_10_256_36.sig  xmss_sha2_10_256_37.sig  xmss_sha2_10_256_38.sig  xmss_sha2_10_256_39.sig  xmss_sha2_10_256_4.sig  xmss_sha2_10_256_40.sig  xmss_sha2_10_256_41.sig  xmss_sha2_10_256_42.sig  xmss_sha2_10_256_43.sig  (+1072 more)
xmssmt_verify/: .gitignore  Makefile  README.md  README.txt  c4a_endian.c  c4a_endian.h  c4a_hash.c  c4a_hash.h  c4a_misc.c  c4a_misc.h  c4a_sha256asm.s  c4a_verify.c  c4a_verify.h  kat.c  quark_misc.h  quark_verify.c  quark_verify.h  test_sigs.pl  verify.c  xmss_ref_001.h  xmss_ref_10.h  xmss_ref_16.h  xmss_ref_20.h  xmssmt_ref_001.h  xmssmt_ref_20_2.h  xmssmt_ref_20_4.h  xmssmt_ref_40_2.h  xmssmt_ref_40_4.h  xmssmt_ref_40_8.h  xmssmt_ref_60_12.h  xmssmt_ref_60_3.h  xmssmt_ref_60_6.h
